Optimisation implémentation Java : utilisation de valueOf
new Boolean(true) nécessite toujours une allocation mémoire, tandis que Boolean.valueOf(true) non.
Idem pour Long, Double, ...